--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 hex = "0.4.3"
+log = { version = "0.4.17", features = ["std", "serde"] }
+env_logger = "0.9.0"
+# TODO: add prometheus
+# prometheus-client = "0.17.0"
 
 
 [[bin]] # Bin to run the HelloWorld gRPC server
