--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,23 +7,20 @@ edition = "2021"
 tonic = "0.7.2"
 prost = "0.10.4"
 prost-types = "0.10.1"
-tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
 futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
-tokio-stream = { version = "0.1", features = ["net"] }
+tokio-stream = { version = "0.1.9", features = ["net"] }
 hex = "0.4.3"
 log = { version = "0.4.17", features = ["std", "serde"] }
 env_logger = "0.9.0"
-# TODO: add prometheus
+
+# TODO: Add prometheus metrics
 # prometheus-client = "0.17.0"
 
 
-[[bin]] # Bin to run the HelloWorld gRPC server
+[[bin]] # Bin to run the woosh grpc server
 name = "woosh-server"
 path = "src/woosh.rs"
 
-[[bin]] # Bin to run the HelloWorld gRPC client
-name = "woosh-test-client"
-path = "src/client.rs"
-
 [build-dependencies]
-tonic-build = "0.7"
+tonic-build = "0.7.2"
