--- a/bazel-test/.bazelrc
+++ b/bazel-test/.bazelrc
@@ -1,5 +1,8 @@
-common:remote --remote_cache=grpc://[::1]:50051/
-common:remote --experimental_guard_against_concurrent_changes
+common:remote_cache --remote_cache=grpc://[::1]:50051/
+common:remote_cache --experimental_guard_against_concurrent_changes
+
+common:remote_exec --remote_executor=grpc://[::1]:50051/
+common:remote_exec --experimental_guard_against_concurrent_changes
 # common:remote --experimental_remote_platform_override='properties:{name:"key1" value:"value1" name:"key2" value:"value2"}'
 # common:remote --client_debug
 # common:remote -s
