--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ path = "src/client.rs"
 
 [build-dependencies]
 tonic-build = "0.7.2"
+cmake = "=0.1.45" # For some reason it is bugged if you use a newer version
